
/**
*	Description	: Gradle build file 
*	Author		: Sanjeev
*/

buildscript{
	repositories{
        jcenter()
        mavenCentral()
    }
    
}

apply plugin : 'application'
apply plugin : 'eclipse'

mainClassName = 'com.sanjeev.gradledemo.main.GradleDemoMain'
version = '1.0'

repositories {
	mavenCentral()    
	}


dependencies {

	compile("org.springframework.boot:spring-boot-starter-web:1.5.8.RELEASE")

   	compile("org.json:json:20171018")
	   	
   	compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.3'
	compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.9.3'
	compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.3'
	
	
   	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.0.1'
	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.0.1'

	compile group: 'org.webjars', name: 'jquery', version: '2.2.4'
	
	compile group: 'org.springframework.ws', name: 'spring-ws-core', version: '2.4.2.RELEASE'
	
	compile group: 'org.springframework', name: 'spring-oxm', version: '3.0.4.RELEASE'
		   	
   	testCompile ("junit:junit:4.12")
   	testCompile ("org.jmockit:jmockit:1.9")
   	testCompile("org.springframework.boot:spring-boot-starter-test:1.5.8.RELEASE")
	
	}

sourceCompatibility=1.8
targetCompatibility=1.8

jar {
    manifest {
        attributes 'Implementation-Title': 'Gradle Demo',
                   'Implementation-Version': version
    }
}

task copyToLib(type: Copy) {
    into "$buildDir/libs"
    from configurations.runtime
	}

task copyJarToBin(type: Copy) {
    from jar
    into "$buildDir/libs"
   }

build.dependsOn(copyToLib, copyJarToBin)



